--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-poinstaller (0.1.2) xenial; urgency=medium
+
+  * Fix wrong depend
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Fri, 20 Oct 2017 11:51:12 +0200
+
 python-poinstaller (0.1.1) xenial; urgency=medium
 
   * Fix bug
