--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-poinstaller (0.3.3) bionic; urgency=medium
+
+  * Fixed tabs
+
+ -- Hector Garcia Huerta <hectorgh@gmail.com>  Tue, 15 Dec 2020 21:40:32 +0100
+
 python-poinstaller (0.3.2) bionic; urgency=medium
 
   * Trying to fix links error
