--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-poinstaller (0.4) jammy; urgency=medium
+
+  * Jammy version
+
+ -- Juan Ramon Pelegrina <juapesai@hotmail.com>  Wed, 30 Aug 2023 13:16:16 +0200
+
 python-poinstaller (0.3) focal; urgency=medium
 
   * Focal version
